Merged revisions 70137 via svnmerge from svn+ssh://pythondev@svn.python.org/python/trunk

........
  r70137 | hirokazu.yamamoto | 2009-03-04 07:18:14 +0900 | 1 line

  Issue #5179: Fixed subprocess handle leak on failure on windows.
........